force-app/main/default/objects/Event_Webcasting_Rates__c/Event_Webcasting_Rates__c.object-meta.xml
<CustomObject>
    <label>Event &amp; Webcasting Rates</label>
    <nameField>
        <displayFormat>Rate{000000000}</displayFormat>
        <label>Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event &amp; Webcasting Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>