force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Additional_Training_Rehearsal_Session__c.field-meta.xml
<CustomField>
    <fullName>Additional_Training_Rehearsal_Session__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Per 30 minutes</description>
    <inlineHelpText>Per 30 minutes</inlineHelpText>
    <label>Additional Training/Rehearsal Session</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>