force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Audio_Slides_Webcast_150_Participant__c.field-meta.xml
<CustomField>
    <fullName>Audio_Slides_Webcast_150_Participant__c</fullName>
    <defaultValue>2250</defaultValue>
    <description>Pre-, live and post-event management support for an audio &amp; slides webcast for up to 150 participants and 60 minutes in duration. Speaker lines and unlimited on-demand viewing for 12 months included.</description>
    <inlineHelpText>Pre-, live and post-event management support for an audio &amp; slides webcast for up to 150 participants and 60 minutes in duration. Speaker lines and unlimited on-demand viewing for 12 months included.</inlineHelpText>
    <label>Audio &amp; Slides Webcast: 150 Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>