force-app/main/default/objects/Event_Webcasting_Rates__c/fields/broadcast_audio_additional_participants__c.field-meta.xml
<CustomField>
    <fullName>broadcast_audio_additional_participants__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Amount charged for every additional 100 participants.</description>
    <inlineHelpText>Amount charged for every additional 100 participants.</inlineHelpText>
    <label>Broadcast Audio Additional Participants</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>