force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Custom_Template_Branding__c.field-meta.xml
<CustomField>
    <fullName>Custom_Template_Branding__c</fullName>
    <defaultValue>250</defaultValue>
    <description>Per hour</description>
    <inlineHelpText>Per hour</inlineHelpText>
    <label>Custom Template Branding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>