force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Full_Event_Moderation__c.field-meta.xml
<CustomField>
    <fullName>Full_Event_Moderation__c</fullName>
    <defaultValue>325</defaultValue>
    <description>Includes 30 min pre-conf + 60 min live event; $100 for each add&#39;l 30 min</description>
    <inlineHelpText>Includes 30 min pre-conf + 60 min live event; $100 for each add&#39;l 30 min</inlineHelpText>
    <label>Full Event Moderation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>