force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Full_Event_Moderation_Add_l_Min__c.field-meta.xml
<CustomField>
    <fullName>Full_Event_Moderation_Add_l_Min__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Per add&apos;l 30 min (after 60 min live event)</description>
    <inlineHelpText>Per add&apos;l 30 min (after 60 min live event)</inlineHelpText>
    <label>Full Event Moderation Add&apos;l Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>