force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Gold_Webinar_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gold_Webinar_Base_Amount__c</fullName>
    <defaultValue>1250</defaultValue>
    <label>Gold Webinar Base Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>