force-app/main/default/objects/Event_Webcasting_Rates__c/fields/ITF_Add_On__c.field-meta.xml
<CustomField>
    <fullName>ITF_Add_On__c</fullName>
    <description>ITF Add-on Rate</description>
    <inlineHelpText>ITF Add-on Rate per 10 international lines booked</inlineHelpText>
    <label>ITF Add On</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>