force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Live_Event_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Live_Event_Monitoring__c</fullName>
    <defaultValue>150</defaultValue>
    <inlineHelpText>Base price for 60 minutes; prorate for each add&#39;l 30 min</inlineHelpText>
    <label>Live Event Monitoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>