force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Platinum_Webinar_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Webinar_Base_Amount__c</fullName>
    <defaultValue>1850</defaultValue>
    <description>Base amount charged for 100 participants, 60 minutes.</description>
    <inlineHelpText>Base amount charged for 100 participants, 60 minutes.</inlineHelpText>
    <label>Platinum Webinar Base Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>