force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Premium_Operator_Assisted_Add_On__c.field-meta.xml
<CustomField>
    <fullName>Premium_Operator_Assisted_Add_On__c</fullName>
    <defaultValue>150</defaultValue>
    <label>Premium Operator-Assisted Add-On</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>