force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>