force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Screen_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Screen_Sharing__c</fullName>
    <defaultValue>950</defaultValue>
    <description>$950 per first hour, $450 per additional 30 minutes</description>
    <inlineHelpText>$950 per first hour, $450 per additional 30 minutes</inlineHelpText>
    <label>Screen Sharing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>