force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Simulated_Live_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Simulated_Live_Delivery__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Per event</description>
    <inlineHelpText>Per event</inlineHelpText>
    <label>Simulated Live Delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>