force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Simulive_Additional_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Simulive_Additional_Minutes__c</fullName>
    <defaultValue>75</defaultValue>
    <description>Per add&#39;l 30 minutes (past initial 60 minutes)</description>
    <inlineHelpText>Per add&#39;l 30 minutes (past initial 60 minutes)</inlineHelpText>
    <label>Simulive Additional Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>