force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Simulive_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Simulive_Base_Amount__c</fullName>
    <defaultValue>300</defaultValue>
    <description>Base Price for Simulive Add-On for web subscriptions (Simulive is included free w/ Gold or Platinum).</description>
    <inlineHelpText>Base Price for Simulive Add-On for web subscriptions (Simulive is included free w/ Gold or Platinum).</inlineHelpText>
    <label>Simulive Base Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>