force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Social_Networking_Logos__c.field-meta.xml
<CustomField>
    <fullName>Social_Networking_Logos__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Per event</description>
    <inlineHelpText>Per event</inlineHelpText>
    <label>Social Networking Logos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>