force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Transcription_Services__c.field-meta.xml
<CustomField>
    <fullName>Transcription_Services__c</fullName>
    <defaultValue>4</defaultValue>
    <description>This is a PER-MINUTE rate.</description>
    <inlineHelpText>This is a PER-MINUTE rate.</inlineHelpText>
    <label>Transcription Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>