force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Video_Slides_Additional_250_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Video_Slides_Additional_250_Attendees__c</fullName>
    <defaultValue>575</defaultValue>
    <description>Per each additional 250 webcast attendees</description>
    <inlineHelpText>Per each additional 250 webcast attendees</inlineHelpText>
    <label>Video &amp; Slides - Additional 250 Attendee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>