force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Video_Slides_Webcast_3000__c.field-meta.xml
<CustomField>
    <fullName>Video_Slides_Webcast_3000__c</fullName>
    <defaultValue>9250</defaultValue>
    <description>Per event. Includes webcam or VCU and slides for 3000 attendees for 60 minutes, 12 month archive</description>
    <inlineHelpText>Per event. Includes webcam or VCU and slides for 3000 attendees for 60 minutes, 12 month archive</inlineHelpText>
    <label>Video &amp; Slides Webcast (3000)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>