force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webcam_Switching__c.field-meta.xml
<CustomField>
    <fullName>Webcam_Switching__c</fullName>
    <defaultValue>950</defaultValue>
    <description>$950 per first hour, $425 per additional 30 minutes</description>
    <inlineHelpText>$950 per first hour, $425 per additional 30 minutes</inlineHelpText>
    <label>Webcam Switching</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>