force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webcast_1000_Premiere_Webcam__c.field-meta.xml
<CustomField>
    <fullName>Webcast_1000_Premiere_Webcam__c</fullName>
    <defaultValue>3499</defaultValue>
    <description>Per month. Includes one (1) Add-On Package</description>
    <inlineHelpText>Per month. Includes one (1) Add-On Package</inlineHelpText>
    <label>Webcast 1000 (Premiere) - Webcam</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>