force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webcast_3000_Premiere_VCU__c.field-meta.xml
<CustomField>
    <fullName>Webcast_3000_Premiere_VCU__c</fullName>
    <defaultValue>15999</defaultValue>
    <description>Webcast 3000 (Premiere) - VCU</description>
    <inlineHelpText>Webcast 3000 (Premiere) - VCU</inlineHelpText>
    <label>Webcast 3000 (Premiere) - VCU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>