force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webcast_500_Premiere_Webcam__c.field-meta.xml
<CustomField>
    <fullName>Webcast_500_Premiere_Webcam__c</fullName>
    <defaultValue>1899</defaultValue>
    <description>Per month</description>
    <inlineHelpText>Per month</inlineHelpText>
    <label>Webcast 500 (Premiere) - Webcam</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>