force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webcast_500_Standard_Audio_Slides__c.field-meta.xml
<CustomField>
    <fullName>Webcast_500_Standard_Audio_Slides__c</fullName>
    <defaultValue>799</defaultValue>
    <description>Per month</description>
    <inlineHelpText>Per month</inlineHelpText>
    <label>Webcast 500 (Standard) - Audio &amp; Slides</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>