force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webcast_Continuing_Education_Hybrid_Me__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Continuing_Education_Hybrid_Me__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Per month</description>
    <inlineHelpText>Per month</inlineHelpText>
    <label>Webcast Continuing Education &amp; Hybrid Me</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>