force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webcast_Essentials_Overage_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Essentials_Overage_Per_Person__c</fullName>
    <defaultValue>6</defaultValue>
    <description>Webcast Essentials Overage Fee that is assessed on a per participant/per webcast basis</description>
    <inlineHelpText>Webcast Essentials Overage Fee that is assessed on a per participant/per webcast basis</inlineHelpText>
    <label>Webcast Essentials Overage Per Person</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>