force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webcast_Extended_Archive_Package__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Extended_Archive_Package__c</fullName>
    <defaultValue>150</defaultValue>
    <description>Per month. Available with Standard subscriptions only</description>
    <inlineHelpText>Per month. Available with Standard subscriptions only</inlineHelpText>
    <label>Webcast Extended Archive Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>