force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webcast_Simulated_Live_Package__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Simulated_Live_Package__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Per month</description>
    <inlineHelpText>Per month</inlineHelpText>
    <label>Webcast Simulated Live Package</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>