force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webcast_Standard_Assist__c.field-meta.xml
<CustomField>
    <fullName>Webcast_Standard_Assist__c</fullName>
    <defaultValue>750</defaultValue>
    <description>Per event. Includes 30 minute pre-conference and 60 minute live event</description>
    <inlineHelpText>Per event. Includes 30 minute pre-conference and 60 minute live event</inlineHelpText>
    <label>Webcast Standard Assist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>