force-app/main/default/objects/Event_Webcasting_Rates__c/fields/Webinar_Package_Additional_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Package_Additional_Minutes__c</fullName>
    <defaultValue>250</defaultValue>
    <description>Amount charged for every additional 30 minutes added per 100 participants.</description>
    <inlineHelpText>Amount charged for every additional 30 minutes added per 100 participants.</inlineHelpText>
    <label>Webinar Package Additional Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>